@@ -1,5 +1,6 @@
 1.3.9:
-	timeout parmaeter was not honoued everywhere
+	Bug fix: Domain regex were not freed on config file reloads	
+	Bug fix: Timeout parmaeter was not honoured everywhere
 1.3.8:
 	Shut up  a warning at build time
 1.3.7:
